--- a/tests/integration/folder/cassettes/test_folder_service/TestFolderService.test_create_delete_folder.yaml
+++ b/tests/integration/folder/cassettes/test_folder_service/TestFolderService.test_create_delete_folder.yaml
@@ -16,12 +16,12 @@ interactions:
     uri: https://api.com/v2/folders?version=2023-11-22
   response:
     body:
-      string: '{"result":{"id":"jqN2qb7j5NjIhlYC","name":"My test folder","created_at":"2024-02-24T20:48:45.000Z","prompt_ids":[]}}'
+      string: '{"result":{"id":"8qN32z1HZHuGDmsy","name":"My test folder","created_at":"2024-02-24T21:12:28.000Z","prompt_ids":[]}}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 20:48:44 GMT
+      - Sat, 24 Feb 2024 21:12:28 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -51,15 +51,15 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/folders/jqN2qb7j5NjIhlYC?version=2023-11-22
+    uri: https://api.com/v2/folders/8qN32z1HZHuGDmsy?version=2023-11-22
   response:
     body:
-      string: '{"result":{"id":"jqN2qb7j5NjIhlYC","name":"My test folder","created_at":"2024-02-24T20:48:45.000Z","prompt_ids":[]}}'
+      string: '{"result":{"id":"8qN32z1HZHuGDmsy","name":"My test folder","created_at":"2024-02-24T21:12:28.000Z","prompt_ids":[]}}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 20:48:45 GMT
+      - Sat, 24 Feb 2024 21:12:29 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -92,12 +92,12 @@ interactions:
     uri: https://api.com/v2/folders?version=2023-11-22
   response:
     body:
-      string: '{"results":[{"id":"jqN2qb7j5NjIhlYC","name":"My test folder","created_at":"2024-02-24T20:48:45.000Z","prompt_ids":[]}],"total_count":1}'
+      string: '{"results":[{"id":"8qN32z1HZHuGDmsy","name":"My test folder","created_at":"2024-02-24T21:12:28.000Z","prompt_ids":[]}],"total_count":1}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 20:48:46 GMT
+      - Sat, 24 Feb 2024 21:12:29 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -127,7 +127,7 @@ interactions:
       connection:
       - keep-alive
     method: DELETE
-    uri: https://api.com/v2/folders/jqN2qb7j5NjIhlYC?version=2023-11-22
+    uri: https://api.com/v2/folders/8qN32z1HZHuGDmsy?version=2023-11-22
   response:
     body:
       string: ''
@@ -135,7 +135,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 20:48:46 GMT
+      - Sat, 24 Feb 2024 21:12:30 GMT
       Keep-Alive:
       - timeout=72
       content-version:
@@ -167,7 +167,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 20:48:47 GMT
+      - Sat, 24 Feb 2024 21:12:31 GMT
       Keep-Alive:
       - timeout=72
       content-length:
