--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,7 +100,7 @@ gitchangelog = "3.0.4"
 pystache = "0.6.5"
 tabulate = "0.9.0"
 m2r = "^0.3.1"
-sphinx-multiversion = { "git" = "https://github.com/samtygier-stfc/sphinx-multiversion.git", branch = "prebuild_command" }
+sphinx-multiversion = {path = "external/sphinx_multiversion"}
 sphinx-copybutton = "^0.5.2"
 sphinx-notfound-page = "^1.0.0"
 langchain = "^0.1.4"
